--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="Assets/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -22,5 +23,40 @@
           </div>
         </div>
       </nav>
+      <main class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
+            </div>
+        </div>
+
+    </main>
 </body>
 </html>
