--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cameron Harvey | Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/style.css">
 </head>
@@ -58,5 +58,12 @@
         </div>
 
     </main>
+    <footer class="footer navbar-dark bg-dark fixed-bottom">
+        <div class="container">
+            <p class="text-center text-muted">
+                &copy; Copyright 2021 Cameron Harvey
+            </p>    
+        </div>
+    </footer>
 </body>
 </html>
