--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Assets/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand btn btn-success" href="#">Cameron Harvey</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +24,13 @@
         </div>
       </nav>
       <main class="container">
+
+        <h1>
+            Portfolio
+        </h1>
+
+        <hr>
+        
         <div class="row">
             <div class="col-sm">
                 <img src="Assets/Images/350x350.png" class="rounded" alt="350x350">
