--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
     <main class="container">
         <h1>
-            Contact Information
+            Contact Me
         </h1>
  
          
