Added green line to footer and changed page header to green

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 
 
     <main class="container">
-        <h1>
-            Contact Me
+        <h1 class="text-success">
+          Contact Me
         </h1>
  
          
@@ -38,6 +38,7 @@
 
 
     <footer class="footer navbar-dark bg-dark fixed-bottom">
+      <div style="margin: -15px -15px 15px -30px; height: 5px;" class="bg-success"></div>
       <div class="container">
           <p class="text-center text-muted">
               &copy; Copyright 2021 Cameron Harvey
