--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       </nav>
       <main class="container">
 
-        <h1>
+        <h1 class="text-success">
             Portfolio
         </h1>
 
@@ -66,6 +66,8 @@
 
     </main>
     <footer class="footer navbar-dark bg-dark fixed-bottom">
+        <div style="margin: -15px -15px 15px -30px; height: 5px;" class="bg-success"></div>
+
         <div class="container">
             <p class="text-center text-muted">
                 &copy; Copyright 2021 Cameron Harvey
