--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,21 @@
          
         <hr>
 
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="nameInput" aria-describedby="nameHelp" placeholder="Name">
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea class="form-control" id="messageTextarea" rows="4" placeholder="Message"></textarea>
+          </div>
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
     </main>
 
 
